--- a/css/main.css
+++ b/css/main.css
@@ -1015,40 +1015,50 @@ li, .matching__profile-btn, .form label, .form textarea,
       padding: .75rem 1.125rem;
       font-size: 1.5rem; } }
 
-.registration__logo {
-  width: 7.083rem;
-  margin-bottom: 10rem;
-  -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05); }
-  @media screen and (min-width: 768px) {
-    .registration__logo {
-      width: 5.3125rem;
-      margin-bottom: 7.5rem; } }
-
-.registration__form {
-  margin: 10rem 0; }
-  @media screen and (min-width: 768px) {
-    .registration__form {
-      margin: 7.5rem 0; } }
-
-.registration--center {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: stretch;
-  -ms-flex-align: stretch;
-  align-items: stretch;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  min-height: 90vh; }
-  @media screen and (min-width: 768px) {
-    .registration--center {
-      min-height: 85vh; } }
+.registration {
+  position: relative;
+  padding: 0 30px; }
+  .registration__close {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 2.083rem;
+    cursor: pointer; }
+    @media screen and (min-width: 768px) {
+      .registration__close {
+        width: 1.5625rem; } }
+  .registration__logo {
+    width: 7.083rem;
+    margin-bottom: 10rem;
+    -webkit-box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05);
+    box-shadow: 0px 20px 50px 0px rgba(0, 0, 0, 0.05); }
+    @media screen and (min-width: 768px) {
+      .registration__logo {
+        width: 5.3125rem;
+        margin-bottom: 7.5rem; } }
+  .registration__form {
+    margin: 10rem 0; }
+    @media screen and (min-width: 768px) {
+      .registration__form {
+        margin: 7.5rem 0; } }
+  .registration--center {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: stretch;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    min-height: 90vh; }
+    @media screen and (min-width: 768px) {
+      .registration--center {
+        min-height: 85vh; } }
 
 .container {
   padding: 0 30px; }
